@@ -6,6 +6,10 @@ Changes with Apache 2.3.9
      Fix a denial of service attack against mod_reqtimeout.
      [Stefan Fritsch]
 
+  *) mod_rewrite: Fix the RewriteEngine directive to work within a
+     location. Previously, once RewriteEngine was switched on globally,
+     it was impossible to switch off. [Graham Leggett]
+
   *) core, mod_include, mod_ssl: Move the expression parser derived from
      mod_include back into mod_include. Replace ap_expr with a parser
      derived from mod_ssl's parser. Make mod_ssl use the new parser. Rework
